--- a/src/_locales/es/messages.json
+++ b/src/_locales/es/messages.json
@@ -535,13 +535,17 @@
     "message": "Un error de red impide que se actualicen los recursos.",
     "description": "used as a tooltip for error icon beside a list"
   },
-  "1pFormatHint": {
-    "message": "Un filtro por línea. El filtro puede ser un nombre de dominio, o un filtro compatible con EasyList. Las líneas que comiencen con <code>!</code> serán ignoradas.",
-    "description": "Short information about how to create custom filters"
-  },
   "1pTrustWarning": {
     "message": "No añadir filtros de fuentes no confiables.",
     "description": "Warning against copy-pasting filters from random sources"
+  },
+  "1pEnableMyFiltersLabel": {
+    "message": "Enable my custom filters",
+    "description": "Label for the checkbox use to enable/disable 'My filters' list"
+  },
+  "1pTrustMyFiltersLabel": {
+    "message": "Allow custom filters requiring trust",
+    "description": "Label for the checkbox use to trust the content of 'My filters' list"
   },
   "1pImport": {
     "message": "Importar y anexar…",
