--- a/src/_locales/he/messages.json
+++ b/src/_locales/he/messages.json
@@ -535,13 +535,17 @@
     "message": "בעיית רשת מנעה מהמשאב להתעדכן.",
     "description": "used as a tooltip for error icon beside a list"
   },
-  "1pFormatHint": {
-    "message": "מסנן אחד לכל שורה. המסנן יכול להיות דומיין פשוט, או מסנן התואם ל- EasyList. שורות עם קידומת <code>!</code> לא יפורשו.",
-    "description": "Short information about how to create custom filters"
-  },
   "1pTrustWarning": {
     "message": "אל תוסיף מסננים ממקורות לא מהימנים.",
     "description": "Warning against copy-pasting filters from random sources"
+  },
+  "1pEnableMyFiltersLabel": {
+    "message": "Enable my custom filters",
+    "description": "Label for the checkbox use to enable/disable 'My filters' list"
+  },
+  "1pTrustMyFiltersLabel": {
+    "message": "Allow custom filters requiring trust",
+    "description": "Label for the checkbox use to trust the content of 'My filters' list"
   },
   "1pImport": {
     "message": "ייבא וצרף…",
