--- a/src/_locales/ko/messages.json
+++ b/src/_locales/ko/messages.json
@@ -535,13 +535,17 @@
     "message": "네트워크 오류로 인해 리소스가 업데이트되지 못했습니다.",
     "description": "used as a tooltip for error icon beside a list"
   },
-  "1pFormatHint": {
-    "message": "한 줄에 한 개의 필터를 입력하세요. 필터는 순수 호스트이름, 혹은 Adblock Plus-호환 필터가 될 수 있습니다. 시작 부분이 &lsquo;!&rsquo; 로 시작되면 무시됩니다.",
-    "description": "Short information about how to create custom filters"
-  },
   "1pTrustWarning": {
     "message": "신뢰할 수 없는 출처의 필터를 추가하지 마십시오.",
     "description": "Warning against copy-pasting filters from random sources"
+  },
+  "1pEnableMyFiltersLabel": {
+    "message": "Enable my custom filters",
+    "description": "Label for the checkbox use to enable/disable 'My filters' list"
+  },
+  "1pTrustMyFiltersLabel": {
+    "message": "Allow custom filters requiring trust",
+    "description": "Label for the checkbox use to trust the content of 'My filters' list"
   },
   "1pImport": {
     "message": "가져오기 및 추가하기",
