--- a/src/_locales/ca/messages.json
+++ b/src/_locales/ca/messages.json
@@ -535,13 +535,17 @@
     "message": "Un error de xarxa va impedir que s'actualitzés el recurs.",
     "description": "used as a tooltip for error icon beside a list"
   },
-  "1pFormatHint": {
-    "message": "Un filtre per línia. Un filtre pot ser un domini, o un filtre compatible amb l'Adblock Plus. S'ignoraran les línies amb el símbol &lsquo;!&rsquo;.",
-    "description": "Short information about how to create custom filters"
-  },
   "1pTrustWarning": {
     "message": "No afegiu filtres de fonts no confiables.",
     "description": "Warning against copy-pasting filters from random sources"
+  },
+  "1pEnableMyFiltersLabel": {
+    "message": "Enable my custom filters",
+    "description": "Label for the checkbox use to enable/disable 'My filters' list"
+  },
+  "1pTrustMyFiltersLabel": {
+    "message": "Allow custom filters requiring trust",
+    "description": "Label for the checkbox use to trust the content of 'My filters' list"
   },
   "1pImport": {
     "message": "Importa i annexa",
