--- a/src/_locales/ka/messages.json
+++ b/src/_locales/ka/messages.json
@@ -535,13 +535,17 @@
     "message": "ქსელის შეცდომის შედეგად, შიგთავსის განახლება ვერ მოხერხდა.",
     "description": "used as a tooltip for error icon beside a list"
   },
-  "1pFormatHint": {
-    "message": "თითოეული ფილტრი ცალკეულ ხაზზე. ფილტრი შეიძლება იყოს საიტის უბრალო დასახელება ან Adblock Plus-სთან თავსებადი მითითებები. ხაზები &lsquo;!&rsquo; თავსართით უგულებელყოფილი იქნება.",
-    "description": "Short information about how to create custom filters"
-  },
   "1pTrustWarning": {
     "message": "ფილტრების არიდება არასანდო წყაროებიდან.",
     "description": "Warning against copy-pasting filters from random sources"
+  },
+  "1pEnableMyFiltersLabel": {
+    "message": "Enable my custom filters",
+    "description": "Label for the checkbox use to enable/disable 'My filters' list"
+  },
+  "1pTrustMyFiltersLabel": {
+    "message": "Allow custom filters requiring trust",
+    "description": "Label for the checkbox use to trust the content of 'My filters' list"
   },
   "1pImport": {
     "message": "შემოტანა და დამატება",
