--- a/platform/mv3/extension/_locales/da/messages.json
+++ b/platform/mv3/extension/_locales/da/messages.json
@@ -144,7 +144,7 @@
     "description": "This describes the 'complete' filtering mode"
   },
   "noFilteringModeDescription": {
-    "message": "Liste over værtsnavne, for hvilke ingen filtrering vil ske",
+    "message": "Liste over værtsnavne, for hvilke ingen filtrering vil ske.",
     "description": "A short description for the editable field which lists trusted sites"
   },
   "behaviorSectionLabel": {
