--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -540,11 +540,11 @@
     "description": "Warning against copy-pasting filters from random sources"
   },
   "1pEnableMyFiltersLabel": {
-    "message": "Enable my custom filters",
+    "message": "Activer mes filtres personnalisés",
     "description": "Label for the checkbox use to enable/disable 'My filters' list"
   },
   "1pTrustMyFiltersLabel": {
-    "message": "Allow custom filters requiring trust",
+    "message": "Autoriser les filtres personnalisés nécessitant de la confiance ",
     "description": "Label for the checkbox use to trust the content of 'My filters' list"
   },
   "1pImport": {
