--- a/src/_locales/hr/messages.json
+++ b/src/_locales/hr/messages.json
@@ -540,11 +540,11 @@
     "description": "Warning against copy-pasting filters from random sources"
   },
   "1pEnableMyFiltersLabel": {
-    "message": "Enable my custom filters",
+    "message": "Omogući moje prilagođene filtre",
     "description": "Label for the checkbox use to enable/disable 'My filters' list"
   },
   "1pTrustMyFiltersLabel": {
-    "message": "Allow custom filters requiring trust",
+    "message": "Dopusti prilagođene filtre koji zahtijevaju povjerenje",
     "description": "Label for the checkbox use to trust the content of 'My filters' list"
   },
   "1pImport": {
