--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -540,11 +540,11 @@
     "description": "Warning against copy-pasting filters from random sources"
   },
   "1pEnableMyFiltersLabel": {
-    "message": "Enable my custom filters",
+    "message": "マイカスタムフィルターを有効化",
     "description": "Label for the checkbox use to enable/disable 'My filters' list"
   },
   "1pTrustMyFiltersLabel": {
-    "message": "Allow custom filters requiring trust",
+    "message": "信頼が必要なカスタムフィルターを許可する",
     "description": "Label for the checkbox use to trust the content of 'My filters' list"
   },
   "1pImport": {
