--- a/src/_locales/ko/messages.json
+++ b/src/_locales/ko/messages.json
@@ -540,11 +540,11 @@
     "description": "Warning against copy-pasting filters from random sources"
   },
   "1pEnableMyFiltersLabel": {
-    "message": "Enable my custom filters",
+    "message": "내 사용자 정의 필터 활성화",
     "description": "Label for the checkbox use to enable/disable 'My filters' list"
   },
   "1pTrustMyFiltersLabel": {
-    "message": "Allow custom filters requiring trust",
+    "message": "신뢰가 필요한 사용자 정의 필터 허용",
     "description": "Label for the checkbox use to trust the content of 'My filters' list"
   },
   "1pImport": {
