--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -540,11 +540,11 @@
     "description": "Warning against copy-pasting filters from random sources"
   },
   "1pEnableMyFiltersLabel": {
-    "message": "Enable my custom filters",
+    "message": "Включить мои пользовательские фильтры",
     "description": "Label for the checkbox use to enable/disable 'My filters' list"
   },
   "1pTrustMyFiltersLabel": {
-    "message": "Allow custom filters requiring trust",
+    "message": "Разрешить пользовательские фильтры, требующие доверия",
     "description": "Label for the checkbox use to trust the content of 'My filters' list"
   },
   "1pImport": {
