--- a/src/_locales/sv/messages.json
+++ b/src/_locales/sv/messages.json
@@ -536,15 +536,15 @@
     "description": "used as a tooltip for error icon beside a list"
   },
   "1pTrustWarning": {
-    "message": "Lägg inte till filter från opålitliga källor.",
+    "message": "Lägg inte till filter från obetrodda källor.",
     "description": "Warning against copy-pasting filters from random sources"
   },
   "1pEnableMyFiltersLabel": {
-    "message": "Enable my custom filters",
+    "message": "Aktivera mina anpassade filter",
     "description": "Label for the checkbox use to enable/disable 'My filters' list"
   },
   "1pTrustMyFiltersLabel": {
-    "message": "Allow custom filters requiring trust",
+    "message": "Att tillåta anpassade filter kräver tillit",
     "description": "Label for the checkbox use to trust the content of 'My filters' list"
   },
   "1pImport": {
