Import translation work from https://crowdin.com/project/ublock

--- a/platform/mv3/extension/_locales/he/messages.json
+++ b/platform/mv3/extension/_locales/he/messages.json
@@ -20,7 +20,7 @@
     "description": "appears as tab name in dashboard"
   },
   "aboutPageName": {
-    "message": "אודות",
+    "message": "על אודות",
     "description": "appears as tab name in dashboard"
   },
   "aboutPrivacyPolicy": {
