--- a/platform/mv3/extension/_locales/es/messages.json
+++ b/platform/mv3/extension/_locales/es/messages.json
@@ -144,7 +144,7 @@
     "description": "This describes the 'complete' filtering mode"
   },
   "noFilteringModeDescription": {
-    "message": "Lista de nombres de host para los cuales no tendrá lugar el filtrado",
+    "message": "Lista de nombres de dominio para los cuales no se realizará ningún filtrado.",
     "description": "A short description for the editable field which lists trusted sites"
   },
   "behaviorSectionLabel": {
