--- a/src/_locales/es/messages.json
+++ b/src/_locales/es/messages.json
@@ -484,11 +484,11 @@
     "description": "Filter lists section name"
   },
   "3pGroupSocial": {
-    "message": "Dispositivos sociales",
+    "message": "Widgets sociales",
     "description": "Filter lists section name"
   },
   "3pGroupCookies": {
-    "message": "Avisos de cookie's",
+    "message": "Avisos de cookies",
     "description": "Filter lists section name"
   },
   "3pGroupAnnoyances": {
@@ -540,11 +540,11 @@
     "description": "Warning against copy-pasting filters from random sources"
   },
   "1pEnableMyFiltersLabel": {
-    "message": "Enable my custom filters",
+    "message": "Habilitar mis filtros personalizados",
     "description": "Label for the checkbox use to enable/disable 'My filters' list"
   },
   "1pTrustMyFiltersLabel": {
-    "message": "Allow custom filters requiring trust",
+    "message": "Permitir filtros personalizados que requieran confianza",
     "description": "Label for the checkbox use to trust the content of 'My filters' list"
   },
   "1pImport": {
