--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -544,7 +544,7 @@
     "description": "Label for the checkbox use to enable/disable 'My filters' list"
   },
   "1pTrustMyFiltersLabel": {
-    "message": "Autoriser les filtres personnalisés nécessitant de la confiance ",
+    "message": "Faire confiance aux filtres personnalisés",
     "description": "Label for the checkbox use to trust the content of 'My filters' list"
   },
   "1pImport": {
