--- a/src/_locales/he/messages.json
+++ b/src/_locales/he/messages.json
@@ -540,11 +540,11 @@
     "description": "Warning against copy-pasting filters from random sources"
   },
   "1pEnableMyFiltersLabel": {
-    "message": "הפעל את הפילטרים המותאמים שלי",
+    "message": "אפשור מסננים מותאמים אישית",
     "description": "Label for the checkbox use to enable/disable 'My filters' list"
   },
   "1pTrustMyFiltersLabel": {
-    "message": "הפעל פילטרים מותאמים הדורשים אמון",
+    "message": "אפשור למסננים מותאמים אישית לדרוש אמון",
     "description": "Label for the checkbox use to trust the content of 'My filters' list"
   },
   "1pImport": {
