--- a/src/_locales/vi/messages.json
+++ b/src/_locales/vi/messages.json
@@ -540,11 +540,11 @@
     "description": "Warning against copy-pasting filters from random sources"
   },
   "1pEnableMyFiltersLabel": {
-    "message": "Enable my custom filters",
+    "message": "Bật bộ lọc tùy chỉnh của tôi",
     "description": "Label for the checkbox use to enable/disable 'My filters' list"
   },
   "1pTrustMyFiltersLabel": {
-    "message": "Allow custom filters requiring trust",
+    "message": "Cho phép các bộ lọc tùy chỉnh yêu cầu sự tin cậy",
     "description": "Label for the checkbox use to trust the content of 'My filters' list"
   },
   "1pImport": {
